syntax = "proto3";

package msg;


message Post {
    string Title            = 1;
    string Slug             = 2;
    string Description      = 3;
    string Link             = 4;
    string Image            = 5;
    string SourceImage      = 6;
    int64 Published         = 7;
    repeated string Categories = 8;
    string SourceTitle      = 9;
}


message RssList {
    map<string, string> List = 1;
}

message PostPageData {
	string PageTitle       = 1;
	string PageImage       = 2;
	map<string,Post> Pages = 3;
}